<resources>
    <string name="app_name">Cipta Inovasi</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scan">Scanner</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="title_dash">Dash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>