<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home__menu2"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_interface__1_"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_barcode_scanner"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_web_button"
        android:title="@string/title_help"/>
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_informan"
        android:title="@string/title_about"/>

</menu>